@@ -461,20 +461,20 @@
 			 */
 			enum Endpoint_Stream_RW_ErrorCodes_t
 			{
-				ENDPOINT_RWSTREAM_ERROR_NoError            = 0, /**< Command completed successfully, no error. */
-				ENDPOINT_RWSTREAM_ERROR_EndpointStalled    = 1, /**< The endpoint was stalled during the stream
-				                                                 *   transfer by the host or device.
-				                                                 */
-				ENDPOINT_RWSTREAM_ERROR_DeviceDisconnected = 1, /**< Device was disconnected from the host during
-				                                                 *   the transfer.
-				                                                 */
-				ENDPOINT_RWSTREAM_ERROR_Timeout            = 2, /**< The host failed to accept or send the next packet
-				                                                 *   within the software timeout period set by the
-				                                                 *   \ref USB_STREAM_TIMEOUT_MS macro.
-				                                                 */
-				ENDPOINT_RWSTREAM_ERROR_CallbackAborted    = 3, /**< Indicates that the stream's callback function
-			                                                     *   aborted the transfer early.
-				                                                 */
+				ENDPOINT_RWSTREAM_NoError            = 0, /**< Command completed successfully, no error. */
+				ENDPOINT_RWSTREAM_EndpointStalled    = 1, /**< The endpoint was stalled during the stream
+				                                           *   transfer by the host or device.
+				                                           */
+				ENDPOINT_RWSTREAM_DeviceDisconnected = 1, /**< Device was disconnected from the host during
+				                                           *   the transfer.
+				                                           */
+				ENDPOINT_RWSTREAM_Timeout            = 2, /**< The host failed to accept or send the next packet
+				                                           *   within the software timeout period set by the
+				                                           *   \ref USB_STREAM_TIMEOUT_MS macro.
+				                                           */
+				ENDPOINT_RWSTREAM_CallbackAborted    = 3, /**< Indicates that the stream's callback function
+			                                               *   aborted the transfer early.
+				                                           */
 			};
 			
 			/** Enum for the possible error return codes of the Endpoint_*_Control_Stream_* functions..
@@ -483,8 +483,8 @@
 			 */
 			enum Endpoint_ControlStream_RW_ErrorCodes_t
 			{
-				ENDPOINT_RWCSTREAM_ERROR_NoError            = 0, /**< Command completed successfully, no error. */
-				ENDPOINT_RWCSTREAM_ERROR_HostAborted        = 1, /**< The aborted the transfer prematurely. */
+				ENDPOINT_RWCSTREAM_NoError            = 0, /**< Command completed successfully, no error. */
+				ENDPOINT_RWCSTREAM_HostAborted        = 1, /**< The aborted the transfer prematurely. */
 			};
 
 		/* Inline Functions: */
